Add contact unit txet modal & delete selected item function

--- a/assets/scss/_setting.scss
+++ b/assets/scss/_setting.scss
@@ -1,6 +1,7 @@
 $mainColor: #28cb92;
 $secColor: #3f3f3f;
 $terColor: #dfeeea;
+$fourColor: #19b37d;
 $dangerColor: #e75e5e;
 
 // 填入數字即可產生相應寬度的@media
