--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,7 @@
 @import "setting";
 @import "normalize";
 
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Poppins:wght@500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Poppins:wght@500;700;900&display=swap");
 
 body {
   background-color: $terColor;
