Fix bug & add components page

--- a/assets/scss/_setting.scss
+++ b/assets/scss/_setting.scss
@@ -2,6 +2,8 @@ $mainColor: #28cb92;
 $secColor: #3f3f3f;
 $terColor: #dfeeea;
 $fourColor: #00bb79;
+$fiveColor: #575EFF;
+$sixColor: #FF007A;
 $dangerColor: #e75e5e;
 
 // 填入數字即可產生相應寬度的@media
