--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -45,7 +45,10 @@ datalist {
 
 .wrap {
   max-width: 1300px;
+  width: 100%;
   padding: 0 20px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .btn {
@@ -59,6 +62,7 @@ datalist {
   letter-spacing: 0.015em;
   display: flex;
   color: $secColor;
+  border: 0;
   @include center;
   align-self: flex-end;
   @extend %ts;
@@ -70,6 +74,16 @@ datalist {
   &:hover {
     background-color: $secColor;
     color: $mainColor;
+  }
+  &.circle {
+    width: 52px;
+    height: 52px;
+    border-radius: 50%;
+    @include center;
+    @include media(1200) {
+      width: 44px;
+      height: 44px;
+    }
   }
 }
 
